# mios

./: .gitignore  CMakeLists.txt  conanfile.txt  configure.sh  copy.sh  dev_install.sh  install.sh  robot_install.sh
.github/workflows/: docker-image.yml
cmake/: FetchContent.cmake
config/: active_tasks
controller_pipeline/src/: cart_torque_pipeline.cpp  joint_torque_pipeline.cpp  joint_velocity_pipeline.cpp  null_pipeline.cpp
core/: CMakeLists.txt
core/src/: core.cpp
docker/: build_docker_image_core.sh  build_docker_image_ml_service.sh
docker/compose/: docker-compose.yml
docker/core/: Dockerfile
docker/ml_service/: Dockerfile
event_publisher/src/: event_publisher.cpp
interface/: CMakeLists.txt
interface/src/: interface.cpp  parameter_server.cpp  ros_node.cpp
knowledge_base/src/: knowledge_base.cpp  local_memory.cpp
learning_module/src/: learning_module.cpp
main/src/: mios.cpp
manipulation_primitive/: CMakeLists.txt
manipulation_primitive/src/: manipulation_primitive.cpp
memory/src/: lt_memory.cpp  memory.cpp  mongodb_client.cpp  parameters.cpp  st_memory.cpp
ml_service/: automatica_demo.py  charlie_rest.py  definitions.py  demo.py  demo2.py  demo_learning.py  get_leaner_data.py  ml_service.py  pitstop_alpha.py  pitstop_bravo.py  pitstop_charlie.py  plotting.py  plotting2.py  rest_single_test.py  run_collective_experiments.py  run_experiments.py  skill_test.py  system_test.py  test_experiment.py
ml_service/database/: database.py
ml_service/definitions/: benchmark_definitions.py  insertion_definitions.py  taxonomy_templates.py  templates.py
ml_service/engine/: engine.py  task_result.py
ml_service/experiments/: collective_learning.py  collective_learning_test.py  experiment_base.py
ml_service/interface/: interface.py
ml_service/knowledge_processor/: kg_linear_regression.py  knowledge_manager.py  knowledge_processor.py  knowledge_processor_base.py  knowledge_processor_v2.py
ml_service/mongodb_client/: mongodb_client.py
ml_service/plotting/: data_acquisition.py  data_processor.py  live_plotter.py  result.py
ml_service/problem_definition/: domain.py  problem_definition.py
ml_service/rpc_visualization/: data_buffer.py  switcher.py
ml_service/services/: base_service.py  basinhopping.py  cmaes.py  generic_optimizer.py  knowledge.py  orig_psp.py  svm.py
ml_service/task_scheduler/: creation_pipeline.py  task_scheduler.py
ml_service/utils/: database.py  exception.py  experiment_wizard.py  helper_functions.py  taxonomy_utils.py  ws_client.py
panda/src/: panda_body.cpp  softhand2.cpp
plugins/wave_variables/: CMakeLists.txt
portal/src/: portal.cpp
python/: Krones_assembly.py  collective_cmd.py  collective_deep_learning.py  industrial_tasks.py  ip.json  ll_interface.py  mios_examples.py
python/desk/: config_loader.py  desk_client.py
python/examples/: telepresence.py  trajectory_recording.py
python/knowledgebase/: database.py
python/taxonomy/: experiments.py  skill_tests.py  taxonomy_utils.py  test_base.py
python/utils/: skill_test.py  system_test.py  udp_client.py  ws_client.py
safety/src/: velocity_walls.cpp  virtual_cube.cpp
skill/descriptions/: external_input.json
skill/src/: skill.cpp  skill_engine.cpp  skill_library.cpp
src/controller_pipeline/: CMakeLists.txt
src/core/: CMakeLists.txt
src/interface/: CMakeLists.txt
src/learning_module/: CMakeLists.txt
src/libraries/: CMakeLists.txt
src/libraries/include/mios/skills/: crank.hpp  draw.hpp  tax_bend.hpp  tax_carry.hpp  tax_drag.hpp  tax_extraction.hpp  tax_grab.hpp  tax_hammer.hpp  tax_indentation.hpp  tax_insertion.hpp  tax_move.hpp  tax_place.hpp  tax_press_button.hpp  tax_pull.hpp  tax_push.hpp  tax_screw_nullspace.hpp  tax_shove.hpp  tax_slide.hpp  tax_slide_object.hpp  tax_swipe.hpp  tax_tip.hpp  tax_turn.hpp  tax_turn_lever.hpp  tax_wipe.hpp
src/libraries/include/mios/strategies/: desired_wrench_strategy.hpp  idle_strategy.hpp  move_to_joint_pose.hpp  move_to_pose.hpp  move_to_pose_chain_strategy.hpp  null_strategy.hpp  read_from_file_strategy.hpp  remote_cart_pose_strategy.hpp  remote_joint_pose_strategy.hpp  remote_torque_strategy.hpp  remote_twist_strategy.hpp  remote_wrench_strategy.hpp  twist_strategy.hpp
src/libraries/src/skills/: crank.cpp  draw.cpp  hand_guiding.cpp  insertion2.cpp  ll_interface.cpp  move_to_contact.cpp  move_to_pose_cart.cpp  move_to_pose_joint.cpp  null_skill.cpp  push.cpp  tax_bend.cpp  tax_carry.cpp  tax_drag.cpp  tax_extraction.cpp  tax_grab.cpp  tax_hammer.cpp  tax_indentation.cpp  tax_insertion.cpp  tax_move.cpp  tax_place.cpp  tax_press_button.cpp  tax_pull.cpp  tax_push.cpp  tax_screw_nullspace.cpp  tax_shove.cpp  tax_slide.cpp  tax_slide_object.cpp  tax_spoon.cpp  tax_swipe.cpp  tax_tip.cpp  tax_turn.cpp  tax_turn_lever.cpp  tax_wipe.cpp  telepresence.cpp  test_skill_1.cpp  wipe.cpp
src/libraries/src/strategies/: cart_compliance_strategy.cpp  desired_wrench_strategy.cpp  ff_strategy.cpp  ff_wiggle_strategy.cpp  ff_wrench_fourier_strategy.cpp  gripper_strategy.cpp  idle_strategy.cpp  joint_compliance_strategy.cpp  move_to_joint_pose.cpp  move_to_pose.cpp  move_to_pose2.cpp  move_to_pose_chain_strategy.cpp  null_strategy.cpp  read_from_file_strategy.cpp  remote_cart_pose_strategy.cpp  remote_joint_pose_strategy.cpp  remote_torque_strategy.cpp  remote_twist_strategy.cpp  remote_wrench_strategy.cpp  twist_strategy.cpp  twist_wiggle_strategy.cpp
src/libraries/src/tasks/: extract_object.cpp  generic_task.cpp  idle_task.cpp  insert_object.cpp  learner_test.cpp  move_to_cart_pose.cpp  move_to_joint_pose.cpp  test_task_1.cpp  test_task_2.cpp  test_task_3.cpp
src/main/: CMakeLists.txt
src/main/src/: mios.cpp
src/manipulation_primitive/: CMakeLists.txt
src/manipulation_primitive/include/mios/manipulation_primitive/: manipulation_primitive.hpp
src/manipulation_primitive/src/: manipulation_primitive.cpp
src/memory/: CMakeLists.txt
src/panda/: CMakeLists.txt
src/portal/: CMakeLists.txt
src/portal/include/mios/portal/: portal.hpp
src/portal/src/: portal.cpp
task/src/: task.cpp  (+5 more)
utils/: mios.sh
(+337 files in other folders)
